<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.sigilius.android.baseballscores.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="24dp"
                android:text="@string/txt_teamA"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/txt_runs"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/txt_outs"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/runs_team_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:paddingTop="16dp"
                    android:text="@string/val_scoreTeamA"
                    android:textColor="@color/black"
                    android:textSize="56sp" />

                <TextView
                    android:id="@+id/outs_team_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:paddingTop="16dp"
                    android:text="@string/val_outsTeamA"
                    android:textColor="@color/black"
                    android:textSize="56sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addRunForTeamA"
                android:paddingLeft="8dp"
                android:text="@string/btn_run" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addOutTeamA"
                android:paddingLeft="8dp"
                android:text="@string/btn_out" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/teal400" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.sigilius.android.baseballscores.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="24dp"
                android:text="@string/txt_teamB"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/txt_runs"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/txt_outs"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/runs_team_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:paddingTop="16dp"
                    android:text="@string/val_scoreTeamB"
                    android:textColor="@color/black"
                    android:textSize="56sp" />

                <TextView
                    android:id="@+id/outs_team_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:paddingTop="16dp"
                    android:text="@string/val_outsTeamB"
                    android:textColor="@color/black"
                    android:textSize="56sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addRunForTeamB"
                android:text="@string/btn_run" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addOutTeamB"
                android:text="@string/btn_out" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/inning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_frame"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="16dp"
        android:text="@string/txt_inning"
        android:textColor="@color/grey"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/inning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inning_text"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="24dp"
        android:paddingTop="16dp"
        android:text="@string/val_inning"
        android:textColor="@color/black"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/seventh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inning_text"
        android:layout_toRightOf="@id/inning"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:onClick="addInning"
            android:text="@string/btn_next_inning" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:onClick="reset"
            android:text="@string/btn_reset" />

    </LinearLayout>


</RelativeLayout>